Aggiunti link news recenti / novità blog

--- a/blog.html
+++ b/blog.html
@@ -218,7 +218,7 @@
               </article>
 
               <article class="panel panel-default">
-                <header class="panel-heading">
+                <header id="b" class="panel-heading">
                   <h2 id="ricercato1">
                     <img src="img/starwars.png" width="100" height="50" alt="trumpet"/>
                     <strong>Come procede la guerra?</strong>
