--- a/indexlogged.html
+++ b/indexlogged.html
@@ -217,15 +217,15 @@
 
               <div class="list-group">
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
+                  <h2><a href="notizia_logged.html">Notiziona!</a></h2>
                   <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
                 </div>
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
+                  <h2><a href="notizia_logged.html">Notiziona!</a></h2>
                   <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
                 </div>
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
+                  <h2><a href="notizia_logged.html">Notiziona!</a></h2>
                   <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                 </div>
               </div>
@@ -240,16 +240,16 @@
 
               <div class="list-group">
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
-                  <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                  <h2><a href="blog_logged.html">2001: odissea nel fungo</a></h2>
+                  <p>2001: Odissea nello spazio (2001: A Space Odyssey) è un film di Stanley Kubrick del 1968, basato su un soggetto di Arthur C. Clarke...</p>
                 </div>
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
-                  <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                  <h2><a href="blog_logged.html#ricercato1">Come procede la guerra?</a></h2>
+                  <p> Il maestro Jedi Qui-Gon Jinn e il suo padawan Obi-Wan Kenobi vengono inviati sul pianeta Naboo per mediare una disputa tra la Repubblica Galattica e la...</p>
                 </div>
                 <div class="list-group-item">
-                  <h2>Subheading</h2>
-                  <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                  <h2><a href="blog2_logged.html">Viaggi nell'iperspazio in arrivo?</a></h2>
+                  <p>I portali galattici sono dispositivi di trasporto di massa sparsi in tutta la galassia...</p>
                 </div>
               </div>
             </div>
