--- a/indexlogged.html
+++ b/indexlogged.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="img/1616.png">
 	</head>
 
 	<body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
