--- a/registrazione_exp.html
+++ b/registrazione_exp.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+<link rel="icon" type="image/x-icon" href="img/1616.png">
 	</head>
 
 	<body>
@@ -55,7 +56,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
@@ -67,28 +68,6 @@
                 </li>
                 <li>
                   <a href="#">Sicurezza</a>
-                </li>
-              </ul>
-            </li>
-            <!-- News -->
-            <li>
-              <a href="news.html">News</a>
-            </li>
-            <!-- Blog -->
-            <li>
-              <a href="blog.html">Blog</a>
-            </li>
-            <!-- Multimedia -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li>
-                  <a href="foto.html">Foto gallery</a>
-                </li>
-                <li>
-                  <a href="video.html">Video gallery</a>
                 </li>
               </ul>
             </li>
