--- a/ricercaglobale.html
+++ b/ricercaglobale.html
@@ -12,9 +12,10 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-	</head>
+<link rel="icon" type="image/x-icon" href="img/1616.png">
+  </head>
 
-	<body>
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -55,7 +56,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
