--- a/esperienze.html
+++ b/esperienze.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="style/screen.css">
     <link rel="stylesheet" href="style/print.css">
     <link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+<link rel="icon" type="image/x-icon" href="img/1616.png">
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -33,12 +33,12 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- Esperienze -->
-            <li class="dropdown active">
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                <li class="active">
+                <li>
                   <a href="esperienze.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
@@ -55,7 +55,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
