--- a/foto1.html
+++ b/foto1.html
@@ -12,65 +12,65 @@
 	<link rel="stylesheet" href="style/screen.css">
 	<link rel="stylesheet" href="style/print.css">
 	<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-</head>
+<link rel="icon" type="image/x-icon" href="img/1616.png">
+	</head>
 
-<body>
-
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-				aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index.html">Shroom Space Ind.</a>
-			</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<!-- vuoto, è tutto a destra -->
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<!-- Esperienze -->
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<li>
-								<a href="esperienze.html">Catalogo completo</a>
-							</li>
-							<li role="separator" class="divider"></li>
-							<li>
-								<a href="esperienza.html">Missione circumlunare</a>
-							</li>
-							<li>
-								<a href="#">Volo a gravità zero</a>
-							</li>
-							<li>
-								<a href="#">Addestramento da astronauta</a>
-							</li>
-							<li>
-								<a href="#">Visita la stazione spaziale</a>
-							</li>
-							<li>
-								<a href="#">Assisti ad un lancio spaziale</a>
-							</li>
-							<li role="separator" class="divider"></li>
-							<li class="dropdown-header">Altre esperienze</li>
-							<li>
-								<a href="#">Assisti ad un lancio spaziale</a>
-							</li>
-							<li>
-								<a href="#">Scopri le nostre tecnologie</a>
-							</li>
-							<li>
-								<a href="#">Sicurezza</a>
-							</li>
-						</ul>
-					</li>
+	<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Shroom Space Ind.</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!-- vuoto, è tutto a destra -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Esperienze -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="esperienze.html">Catalogo completo</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li>
+                  <a href="esperienza.html">Missione circumlunare</a>
+                </li>
+                <li>
+                  <a href="#">Volo a gravità zero</a>
+                </li>
+                <li>
+                  <a href="#">Addestramento da astronauta</a>
+                </li>
+                <li>
+                  <a href="#">Visita la stazione spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Camminata nello spazio</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Altre esperienze</li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Scopri le nostre tecnologie</a>
+                </li>
+                <li>
+                  <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
 					<!-- News -->
 					<li>
 						<a href="news.html">News</a>
