Aggiunta favicon a pagine loggate

--- a/registrazione_exp.html
+++ b/registrazione_exp.html
@@ -12,10 +12,11 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+            </li>
 <link rel="icon" type="image/x-icon" href="img/1616.png">
-	</head>
+  </head>
 
-	<body>
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -68,6 +69,28 @@
                 </li>
                 <li>
                   <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
+            <!-- News -->
+            <li>
+              <a href="news.html">News</a>
+            </li>
+            <!-- Blog -->
+            <li>
+              <a href="blog.html">Blog</a>
+            </li>
+            <!-- Multimedia -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="foto.html">Foto gallery</a>
+                </li>
+                <li>
+                  <a href="video.html">Video gallery</a>
                 </li>
               </ul>
             </li>
