--- a/scrivici_logged.html
+++ b/scrivici_logged.html
@@ -16,10 +16,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
 		
-	</head>
+    <link rel="icon" type="image/x-icon" href="img/1616.png">
+  </head>
 
-	<body>
-
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -60,7 +60,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
