--- a/dic_logged.html
+++ b/dic_logged.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style/screen.css">
     <link rel="stylesheet" href="style/print.css">
     <link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="img/1616.png">
   </head>
 
   <body>
@@ -54,7 +55,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
