--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -12,10 +12,10 @@
 		<link rel="stylesheet" href="style/screen.css">
 		<link rel="stylesheet" href="style/print.css">
 		<link rel="stylesheet" href="style/bootstrap_local/css/bootstrap.min.css">
-	</head>
+    <link rel="icon" type="image/x-icon" href="img/1616.png">
+  </head>
 
-	<body>
-
+  <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -34,7 +34,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- Esperienze -->
-            <li class="dropdown active">
+            <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
                 <span class="caret"></span>
               </a>
@@ -43,8 +43,8 @@
                   <a href="esperienze_logged.html">Catalogo completo</a>
                 </li>
                 <li role="separator" class="divider"></li>
-                <li class="active">
-                  <a href="#">Missione circumlunare</a>
+                <li>
+                  <a href="esperienza_logged.html">Missione circumlunare</a>
                 </li>
                 <li>
                   <a href="#">Volo a gravità zero</a>
@@ -56,7 +56,7 @@
                   <a href="#">Visita la stazione spaziale</a>
                 </li>
                 <li>
-                  <a href="#">Assisti ad un lancio spaziale</a>
+                  <a href="#">Camminata nello spazio</a>
                 </li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Altre esperienze</li>
