--- a/news_logged.html
+++ b/news_logged.html
@@ -71,7 +71,7 @@
               </ul>
             </li>
             <!-- News -->
-            <li>
+            <li class="active">
               <a href="#">News</a>
             </li>
             <!-- Blog -->
