--- a/esperienze_logged.html
+++ b/esperienze_logged.html
@@ -33,7 +33,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- Esperienze -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
                 <span class="caret"></span>
               </a>
