--- a/mappa.html
+++ b/mappa.html
@@ -118,7 +118,7 @@
               </ul>
             </li>
             <!-- Contatti -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
