--- a/news.html
+++ b/news.html
@@ -71,7 +71,7 @@
               </ul>
             </li>
             <!-- News -->
-            <li>
+            <li class="active">
               <a href="news.html">News</a>
             </li>
             <!-- Blog -->
