--- a/notizia_logged.html
+++ b/notizia_logged.html
@@ -71,7 +71,7 @@
               </ul>
             </li>
             <!-- News -->
-            <li>
+            <li class="active">
               <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
