--- a/scrivici_logged.html
+++ b/scrivici_logged.html
@@ -137,7 +137,7 @@
             </li>
             <!-- Utente -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><em><strong>user</strong></em>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
