--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -133,7 +133,7 @@
             </li>
             <!-- Utente -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><em><strong>user</strong></em>
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -165,7 +165,7 @@
       </ol>
 
       <div class="alert alert-info" role="alert">
-        <p>Benvenuto, user! Dai un'occhiata a questa unica esperienza!</p>
+        <p><em><strong>user</strong></em> Dai un'occhiata a questa unica esperienza!</p>
       </div>
 
       <header class="jumbotron">
