Aggiunto bottone elimina filtri in ricerca news

--- a/ricercanews.html
+++ b/ricercanews.html
@@ -301,8 +301,11 @@
                 </div>
               </div>
               <div class="row">  
-                <div class="col-md-12">
+                <div class="col-md-4">
                   <a href="ricercanews.html"><button class="btn btn-success btn-lg">Cerca</button></a>
+                </div>
+                <div class="col-md-4">
+                  <a href="news.html"><button class="btn btn-danger btn-lg">Cancella filtri</button></a>
                 </div>
               </div>
                 </div>
