--- a/foto_logged.html
+++ b/foto_logged.html
@@ -80,7 +80,7 @@
                 <a href="blog_logged.html">Blog</a>
               </li>
               <!-- Multimedia -->
-              <li class="dropdown">
+              <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
                   <span class="caret"></span>
                 </a>
