--- a/partners_logged.html
+++ b/partners_logged.html
@@ -94,7 +94,7 @@
               </ul>
             </li>
             <!-- Partners -->
-            <li>
+            <li class="active">
               <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
