--- a/blog_logged.html
+++ b/blog_logged.html
@@ -75,7 +75,7 @@
               <a href="news_logged.html">News</a>
             </li>
             <!-- Blog -->
-            <li>
+            <li class="active">
               <a href="blog_logged.html">Blog</a>
             </li>
             <!-- Multimedia -->
