--- a/opportunita_logged.html
+++ b/opportunita_logged.html
@@ -98,7 +98,7 @@
               <a href="partners_logged.html">Partners</a>
             </li>
             <!-- Chi siamo -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
                 <span class="caret"></span>
               </a>
