--- a/scrivici_logged.html
+++ b/scrivici_logged.html
@@ -122,7 +122,7 @@
               </ul>
             </li>
             <!-- Contattaci -->
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
