--- a/searched_logged.html
+++ b/searched_logged.html
@@ -146,7 +146,7 @@
               </ul>
             </li>
             <!-- Ricerca -->
-            <li>
+            <li class="active">
               <a href="ricercaglobale_logged.html">
                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                 <span class="hidden-md hidden-lg"> Cerca nel sito</span>
