--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -165,7 +165,7 @@
       </ol>
 
       <div class="alert alert-info" role="alert">
-        <p><em><strong>user</strong></em> Dai un'occhiata a questa unica esperienza!</p>
+        <p>Benvenuto user! Dai un'occhiata a questa unica esperienza!</p>
       </div>
 
       <header class="jumbotron">
