--- a/copyright_logged.html
+++ b/copyright_logged.html
@@ -202,7 +202,7 @@
             <li>
               <a href="privacy_logged.html">Privacy Policy</a>
             </li>
-            <li>
+            <li class="active">
               <a href="copyright_logged.html">Copyright</a>
             </li>
           </ul>
