--- a/mappasito_logged.html
+++ b/mappasito_logged.html
@@ -244,7 +244,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li>
+            <li class="active">
               <a href="mappasito_logged.html">Mappa sito</a>
             </li>
             <li>
