--- a/privacy_logged.html
+++ b/privacy_logged.html
@@ -222,7 +222,7 @@
             <li>
               <a href="mappasito_logged.html">Mappa sito</a>
             </li>
-            <li>
+            <li class="active">
               <a href="privacy_logged.html">Privacy Policy</a>
             </li>
             <li>
