--- a/ricercanews.html
+++ b/ricercanews.html
@@ -304,8 +304,11 @@
                 <div class="col-md-4">
                   <a href="ricercanews.html"><button class="btn btn-success btn-lg">Cerca</button></a>
                 </div>
+              </div>
+              <br>
+              <div class="row">
                 <div class="col-md-4">
-                  <a href="news.html"><button class="btn btn-danger btn-lg">Cancella filtri</button></a>
+                  <a href="news.html"><button class="btn btn-danger">Cancella filtri</button></a>
                 </div>
               </div>
                 </div>
