--- a/ricercanews_logged.html
+++ b/ricercanews_logged.html
@@ -278,10 +278,13 @@
               </div>
               <div class="row">  
                 <div class="col-md-4">
-                  <a href="ricercanews_logged.html"><button class="btn btn-success btn-lg">Cerca</button></a>
-                  <div class="col-md-4">
-                    <a href="news_logged.html"><button class="btn btn-danger btn-lg">Cancella filtri</button></a>
-                  </div>
+                  <a href="ricercanews.html"><button class="btn btn-success btn-lg">Cerca</button></a>
+                </div>
+              </div>
+              <br>
+              <div class="row">
+                <div class="col-md-4">
+                  <a href="news.html"><button class="btn btn-danger">Cancella filtri</button></a>
                 </div>
               </div>
                 </div>
