Generalizzazione esperienza singola

--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -169,7 +169,7 @@
       </div>
 
       <header class="jumbotron">
-        <h1>Missione circumlunare</h1>
+        <h1>Esperienza</h1>
         <p>Solo 24 persone hanno lasciato l'orbita terrestre e si sono avventurate verso la Luna. Le ultime persone ad aver toccato il suolo lunare furono Gene Cernan e Harrison Schmitt, che lo abbandonarono il 14 Dicembre 1972 per tornare sulla Terra grazie alla nave Apollo. Nessuno è più stato così vicino alla Luna. Noi cambieremo tutto ciò.</p>
       </header>
         
