--- a/esperienze_logged.html
+++ b/esperienze_logged.html
@@ -191,12 +191,12 @@
 					</div>
 			
 					<!-- Elenco esperienze -->
-					<div class="row">
+          <div class="row">
             <div class="col-lg-4">
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Missione circumlunare</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
@@ -206,7 +206,7 @@
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Volo a gravità zero</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
@@ -216,7 +216,7 @@
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Addestramento da astronauta</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
@@ -226,7 +226,7 @@
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Visita la stazione spaziale</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
@@ -236,7 +236,7 @@
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Camminata nello spazio</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
@@ -246,12 +246,32 @@
               <div class="thumbnail">
                 <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Assisti ad un lancio spaziale</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Scopri le nostre tecnologie</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Sicurezza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>            
           </div>
 
 				</div>
