--- a/user.html
+++ b/user.html
@@ -197,7 +197,7 @@
                       <img class="media-object img-rounded img-responsive" src="img/img1.jpg">
                     </div>
                     <div class="col-sm-6">
-                      <h2>Missione circumlunare</h2>
+                      <h2>Esperienza</h2>
                       <a href="esperienza_logged.html">
                         <input type="button" class="btn btn-info btn-md" value="Dettagli esperienza">
                       </a>
