Modifiche articoli news

--- a/index.html
+++ b/index.html
@@ -242,15 +242,15 @@
 
               <div class="list-group">
                 <div class="list-group-item">
-                  <h2><a href="notizia.html">Notiziona!</a></h2>
+                  <h2><a href="notizia.html">Notizia</a></h2>
                   <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
                 </div>
                 <div class="list-group-item">
-                  <h2><a href="notizia.html">Notiziona!</a></h2>
+                  <h2><a href="notizia.html">Notizia</a></h2>
                   <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
                 </div>
                 <div class="list-group-item">
-                  <h2><a href="notizia.html">Notiziona!</a></h2>
+                  <h2><a href="notizia.html">Notizia</a></h2>
                   <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                 </div>
               </div>
