--- a/news_logged.html
+++ b/news_logged.html
@@ -179,7 +179,7 @@
 											<img src="img/img1.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 										</div>
 										<div class="col-sm-8">
-											<a href="notizia_logged.html"><h1>Notiziona!</h1></a>
+											<a href="notizia_logged.html"><h1>Notizia</h1></a>
 											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, debitis. Excepturi dolor deleniti earum provident, adipisci inventore voluptate deserunt tenetur veritatis eligendi a culpa facilis atque perspiciatis maxime sequi officia?</p>
 											<div class="row">
                         <div class="col-sm-3">
@@ -206,7 +206,7 @@
 											<img src="img/img3.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 										</div>
 										<div class="col-sm-8">
-											<a href="notizia_logged.html"><a href="notizia_logged.html"><h1>Notiziona!</h1></a></a>
+											<a href="notizia_logged.html"><a href="notizia_logged.html"><h1>Notizia</h1></a></a>
 											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, nemo amet deleniti quibusdam culpa illo suscipit incidunt quasi, repellat sapiente perferendis. Distinctio a fugiat cupiditate eius ad pariatur voluptatibus atque!</p>
 											<div class="row">
                         <div class="col-sm-3">
@@ -233,7 +233,7 @@
 											<img src="img/job1.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 										</div>
 										<div class="col-sm-8">
-											<a href="notizia_logged.html"><h1>Notiziona!</h1></a>
+											<a href="notizia_logged.html"><h1>Notizia</h1></a>
 											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, nemo amet deleniti quibusdam culpa illo suscipit incidunt quasi, repellat sapiente perferendis. Distinctio a fugiat cupiditate eius ad pariatur voluptatibus atque!</p>
 											<div class="row">
                         <div class="col-sm-3">
@@ -260,7 +260,7 @@
 											<img src="img/spaceodissey.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 										</div>
 										<div class="col-sm-8">
-											<a href="notizia_logged.html"><h1>Notiziona!</h1></a>
+											<a href="notizia_logged.html"><h1>Notizia</h1></a>
 											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, nemo amet deleniti quibusdam culpa illo suscipit incidunt quasi, repellat sapiente perferendis. Distinctio a fugiat cupiditate eius ad pariatur voluptatibus atque!</p>
 											<div class="row">
                         <div class="col-sm-3">
@@ -284,10 +284,10 @@
 								<div class="list-group-item">
 									<article class="row">
 										<div class="col-sm-4">
-											<img src="img/img3.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
+											<img src="img/img2.jpg" class="img-responsive img-thumbnail" alt="Responsive image">
 										</div>
 										<div class="col-sm-8">
-											<a href="notizia_logged.html"><h1>Notiziona!</h1></a>
+											<a href="notizia_logged.html"><h1>Notizia</h1></a>
 											<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, nemo amet deleniti quibusdam culpa illo suscipit incidunt quasi, repellat sapiente perferendis. Distinctio a fugiat cupiditate eius ad pariatur voluptatibus atque!</p>
 											<div class="row">
                         <div class="col-md-3">
