--- a/ricercaesperienze.html
+++ b/ricercaesperienze.html
@@ -183,7 +183,8 @@
 
 			<ol class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
-				<li class="active">Esperienze</li>
+        <li><a href="esperienze.html">Esperienze</a></li>
+				<li class="active">Risultati ricerca</li>
 			</ol>
 
 			<div class="panel panel-default">
@@ -207,7 +208,7 @@
 							<div class="panel panel-default">
 								<form class="panel-body" action="ricercaesperienze.html">
 									<label for="blogsearch">Cerca un'esperienza!</label> 
-									<input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
+									<input id="blogsearch" value="spaziale" class="form-control" type="search" placeholder="Cerca...">
 								</form>
 							</div>
 						</aside>
@@ -219,9 +220,9 @@
 					<div class="row">
 						<div class="col-lg-4">
 							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+								<img class="img-circle" src="img/exp5.jpg" alt="Generic placeholder image" width="140" height="140">
 								<div class="caption">
-									<h4>Esperienza</h4>
+									<h4>Visita la stazione spaziale</h4>
 									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
 									<p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
 								</div>
@@ -229,9 +230,9 @@
 						</div>
             <div class="col-lg-4">
               <div class="thumbnail">
-                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <img class="img-circle" src="img/exp2.jpg" alt="Generic placeholder image" width="140" height="140">
                 <div class="caption">
-                  <h4>Esperienza</h4>
+                  <h4>Assisti ad un lancio spaziale</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
                   <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
