--- a/ricercanews_logged.html
+++ b/ricercanews_logged.html
@@ -284,7 +284,7 @@
               <br>
               <div class="row">
                 <div class="col-md-4">
-                  <a href="news.html"><button class="btn btn-danger">Cancella filtri</button></a>
+                  <a href="news_logged.html"><button class="btn btn-danger">Cancella filtri</button></a>
                 </div>
               </div>
                 </div>
